<resources>
    <string name="app_name">TooFestival.es</string>
    <!-- loadings messages -->
    <string name="no_posts">No festivals</string>
    <string name="no_more_posts">No more festivals</string>
    <string name="loading_countries">Loading countries…</string>
    <string name="loading_categories">Loading categories…</string>
    <string name="loading_posts">Loading festivals…</string>
    <string name="loading_post">Loading festival…</string>
    <string name="error_load_countries">Network error. Failed to load countries.</string>
    <string name="error_load_categories">Network error. Failed to load categories.</string>
    <string name="error_load_posts">Network error. Failed to load articles.</string>
    <string name="error_load_more_posts">Network error. Failed to load more articles.</string>
    <string name="error_load_post">Network error. Failed to load article.</string>
    <!-- actions -->
    <string name="action_comments">Comments</string>
    <string name="action_retry">Retry</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_send_to_wear">Send to my watch</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_exit">Exit</string>
    <!-- user -->
    <string name="user">User</string>
    <string name="login">Login</string>
    <string name="messages">Messages</string>
    <string name="contact">Contact</string>
    <string name="calendar">Calendar</string>
    <string name="map">Map</string>
    <string name="invite_friends">Invite your friends</string>


    <!-- events manager -->
    <string name="filters">Filters</string>
    <string name="countries">Countries</string>
    <string name="country_prompt">Choose a country</string>
    <string name="categories">Categories</string>
    <string name="category_prompt">Choose a category</string>
    <string name="when_prompt">Choose when</string>
    <string name="where">Where</string>
    <string name="when">When</string>
    <string name="all_events">All</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="music">Music</string>
    <string name="date">Date</string>
    <string name="popularity">Popularity</string>
    <string name="festival">Festival</string>
    <string name="location">Location</string>
    <string name="website">Website</string>
    <string name="tickets">Tickets</string>
    <string name="search_hint">Search festival</string>
    <string name="search_result">Search Result for</string>
    <string name="title_activity_maps">Map</string>

    <!-- mail -->
    <string name="subject">Subject</string>

    <!-- AR -->
    <string name="augmented_reality">Augmented Reality</string>
    <string name="action_add_random_poi">Create random POI</string>
    <string name="action_add_cardinal_pois">Add cardinal direction POIs</string>
    <string name="action_delete_last_poi">Delete last created POI</string>
    <string name="action_delete_all_pois">Delete all POIs</string>


    <string name="fb_login_protocol_scheme">fb688752971148573</string>
    <string name="facebook_app_id">688752971148573</string>

    <string-array name="scope_arrays">
        <item value="future">All</item>
        <item value="today">Today</item>
        <item value="tomorrow">Tomorrow</item>
        <item value="month">This month</item>
    </string-array>
</resources>
