<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_dark"
    android:id="@+id/search_layout"
    android:clickable="true">
    <!--
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary_dark"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/filters"
        android:textColor="@color/color_white"
        android:textSize="@dimen/title"/>
        -->
    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:background="@drawable/rounded_edittext"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@color/color_white"
        android:textColorHint="@color/color_primary_dark"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/when"
        android:textColor="@color/color_white"
        android:textSize="@dimen/card_title"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_shape"
        android:spinnerMode="dropdown"
        android:prompt="@string/when_prompt"
        android:popupBackground="@color/grey_700"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        android:entries="@array/scope_arrays"
        />
    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#90909090"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/where"
        android:textColor="@color/color_white"
        android:textSize="@dimen/card_title"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_shape"
        android:spinnerMode="dropdown"
        android:prompt="@string/country_prompt"
        android:popupBackground="@color/grey_700"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#90909090"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/music"
        android:textColor="@color/color_white"
        android:textSize="@dimen/card_title"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_shape"
        android:spinnerMode="dropdown"
        android:prompt="@string/category_prompt"
        android:popupBackground="@color/grey_700"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        android:weightSum="1.0"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_weight=".5"
            android:textColor="#FFFFFF"
            android:background="@color/color_primary_dark"
            android:text="Reiniciar Filtros"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_weight=".5"
            android:textColor="#FFFFFF"
            android:background="@color/color_primary_dark"
            android:text="Aplicar Filtros"
            android:textAllCaps="false"
            />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>