<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:clickable="true"
    tools:context=".app.PostActivity">

    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:background="@color/color_primary">
                <ImageView
                    android:id="@+id/featuredImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"/>

                <ImageView
                    android:id="@+id/youtube_thumbnail"
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:src="@drawable/youtube_play"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="@color/color_primary_dark"
                android:layout_below="@id/thumbnail"
                android:weightSum="1">
                <LinearLayout
                    android:id="@+id/line_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/festival"
                        android:textColor="@color/color_accent"
                        android:textSize="@dimen/title"
                        android:textStyle="bold"/>
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/line_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line_title"
                    android:paddingTop="@dimen/padding_attributes"
                    android:paddingBottom="@dimen/padding_attributes">
                    <ImageView
                        android:id="@+id/calendar_img"
                        android:layout_width="@dimen/icon_attributes"
                        android:layout_height="@dimen/icon_attributes"
                        android:paddingRight="8dp"
                        android:src="@drawable/calendar"
                        />
                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/calendar_img"
                        android:text="@string/date"
                        android:textSize="@dimen/attributes"
                        android:textColor="@color/color_white"
                        android:textStyle="bold"/>
                </RelativeLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#c0c0c0"/>
                <RelativeLayout
                    android:id="@+id/line_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line_date"
                    android:paddingTop="@dimen/padding_attributes"
                    android:paddingBottom="@dimen/padding_attributes">
                    <ImageView
                        android:id="@+id/map_marker_img"
                        android:layout_width="@dimen/icon_attributes"
                        android:layout_height="@dimen/icon_attributes"
                        android:paddingRight="8dp"
                        android:src="@drawable/map_marker"
                        />
                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/map_marker_img"
                        android:text="@string/location"
                        android:textSize="@dimen/attributes"
                        android:textColor="@color/color_white"
                        android:textStyle="bold"/>
                </RelativeLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#c0c0c0"/>
                <RelativeLayout
                    android:id="@+id/line_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line_location"
                    android:paddingTop="@dimen/padding_attributes"
                    android:paddingBottom="@dimen/padding_attributes">
                    <ImageView
                        android:id="@+id/music_img"
                        android:layout_width="@dimen/icon_attributes"
                        android:layout_height="@dimen/icon_attributes"
                        android:paddingRight="8dp"
                        android:src="@drawable/music"
                        />
                    <TextView
                        android:id="@+id/categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/music_img"
                        android:text="@string/categories"
                        android:textSize="@dimen/attributes"
                        android:textColor="@color/color_white"
                        android:textStyle="bold"/>
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#c0c0c0"/>

                <RelativeLayout
                    android:id="@+id/line_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line_categories"
                    android:paddingTop="@dimen/padding_attributes"
                    android:paddingBottom="@dimen/padding_attributes">
                    <ImageView
                        android:id="@+id/website_img"
                        android:layout_width="@dimen/icon_attributes"
                        android:layout_height="@dimen/icon_attributes"
                        android:layout_centerVertical="true"
                        android:paddingRight="8dp"
                        android:src="@drawable/website"
                        />
                    <TextView
                        android:id="@+id/website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/website_img"
                        android:text="@string/website"
                        android:textSize="@dimen/attributes"
                        android:textColor="@color/color_white"
                        android:textStyle="bold"/>
                    <Button
                        android:id="@+id/btn_tickets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:drawableLeft="@drawable/ic_ticket"
                        android:drawablePadding="10dip"
                        android:clickable="true"
                        android:autoLink="web"
                        android:cursorVisible="true"
                        android:text="@string/tickets"
                        android:textColor="@color/color_white"
                        android:textAllCaps="false"
                        android:background="@drawable/btn_tickets"
                        android:linksClickable="true"
                        android:onClick="goToTickets" />
                </RelativeLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_primary">
                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    />
            </RelativeLayout>

            <FrameLayout
                android:id="@+id/fragment_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                tools:context="es.toofestival.toofestivales.app.PostActivity" >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imagetrans"
                    android:layout_alignTop="@+id/map"
                    android:layout_alignBottom="@+id/map"
                    android:layout_alignEnd="@+id/map"
                    android:layout_alignRight="@+id/map"
                    android:layout_alignLeft="@+id/map"
                    android:layout_alignStart="@+id/map"
                    android:background="@color/transparent"/>
                <ImageView
                    android:id="@+id/click_to_move"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_click_to_move_red"
                    android:layout_gravity="left|top"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:clickable="true"
                    android:onClick="setMapUiSettings"/>
            </fragment>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_primary">
                <ImageView
                    android:contentDescription="logo"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/toofestival"
                    android:layout_height="50dp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:src="@drawable/ic_comments" />

</android.support.design.widget.CoordinatorLayout>